@@ -71,3 +71,6 @@ current (1.0.5)
 * fixed and centered paginator in log view
 * facelift
 * updated documentation
+* fixed some minor php warnings
+* added default password for nagiosadmin
+* removed logout button from setups w/o authentication
